--- a/product-list.html
+++ b/product-list.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>내츄럴플러스</title>
-   
+
     <link rel="stylesheet" href="base.css" />
-</head>
-<body>
+  </head>
+  <body>
     <header class="toptitle">
-        <img class="logo" src="images/logo.png" alt="상단로고" />
-        <div class="hamburger">
-            <div class="open-btn">&#9776;</div>
-            <nav class="menu">
-                <div class="close-btn"> &times;</div>
-                <ul class="nav-item">
-                    <li><a class="selected" href="index.html">전체</a></li>
-                    <li><a class="selected" href="list.html">BEST</a></li>
-                    <!-- <li><a class="selected" href="detailpage.html">상품
+      <img class="logo" src="images/logo.png" alt="상단로고" />
+      <div class="hamburger">
+        <div class="open-btn">&#9776;</div>
+        <nav class="menu">
+          <div class="close-btn">&times;</div>
+          <ul class="nav-item">
+            <li><a class="selected" href="index.html">전체</a></li>
+            <li><a class="selected" href="list.html">BEST</a></li>
+            <!-- <li><a class="selected" href="detailpage.html">상품
                             소개</a></li> -->
-                    <li><a class="selected" href="contact.html">알림
-                            신청</a></li>
-                </ul>
-            </nav>
-        </div>
+            <li><a class="selected" href="contact.html">알림 신청</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
-    
+
     <footer>
-        <img class="footer-logo-img" src="images/logo.png" alt="푸터로고" />
-        <p class="footer-p1"> ⓒ 2025 건강한 하루 | 고객센터 1234-5678</p>
-        <p class="footer-p2"> 안전거래를 위해 페이먼트 구매안전(에스크로)에 가입하여 서비스를 제공하고 있습니다.</p>
-        <p class="footer-p3"> Copyright ⓒ 내츄럴플러스 | All rights reserved.</p>
+      <img class="footer-logo-img" src="images/logo.png" alt="푸터로고" />
+      <p class="footer-p1">ⓒ 2025 건강한 하루 | 고객센터 1234-5678</p>
+      <p class="footer-p2">
+        안전거래를 위해 페이먼트 구매안전(에스크로)에 가입하여 서비스를 제공하고
+        있습니다.
+      </p>
+      <p class="footer-p3">Copyright ⓒ 내츄럴플러스 | All rights reserved.</p>
     </footer>
-<script src="scripts.js"></script>
-</body>
+    <script src="scripts.js"></script>
+  </body>
 </html>
