--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
           <div class="close-btn">&times;</div>
           <ul class="nav-item">
             <li><a class="selected" href="index.html">전체</a></li>
-            <li><a class="selected" href="list.html">BEST</a></li>
+            <li><a class="selected" href="product-list.html">BEST</a></li>
             <!-- <li><a class="selected" href="detailpage.html">상품
                             소개</a></li> -->
             <li><a class="selected" href="contact.html">알림 신청</a></li>
@@ -48,7 +48,7 @@
             <span class="send"> 신청하기 </span>를 눌러주세요!
           </p>
         </article>
-        <article>
+        <article class="ring-mail-button">
           <form>
             <label for="first-name">성함</label>
             <input
