--- a/product-list.html
+++ b/product-list.html
@@ -6,6 +6,7 @@
     <title>내츄럴플러스</title>
 
     <link rel="stylesheet" href="base.css" />
+    <link rel="stylesheet" href="product.css" />
   </head>
   <body>
     <header class="toptitle">
@@ -16,7 +17,7 @@
           <div class="close-btn">&times;</div>
           <ul class="nav-item">
             <li><a class="selected" href="index.html">전체</a></li>
-            <li><a class="selected" href="list.html">BEST</a></li>
+            <li><a class="selected" href="product-list.html">BEST</a></li>
             <!-- <li><a class="selected" href="detailpage.html">상품
                             소개</a></li> -->
             <li><a class="selected" href="contact.html">알림 신청</a></li>
@@ -24,6 +25,84 @@
         </nav>
       </div>
     </header>
+
+    <main class="product-list-main">
+      <section class="product-list">
+        <article class="product-one product-flex">
+          <div class="p-img">
+            <img class="p-img" src="images/banaba.png" alt="바나바" />
+          </div>
+          <div class="p-p">
+            <p>
+              [내츄럴플러스] 혈당건강 바나바 90정 총4박스(12개월분) + 쇼핑백1호
+            </p>
+          </div>
+          <p class="price"><strong>39,900원</strong> <span>75%</span></p>
+          <button class="buy-btn">구매하기</button>
+        </article>
+        <article class="product-two product-flex">
+          <div class="p-img">
+            <img class="p-img" src="images/probiotic.png" alt="프로바이오틱" />
+          </div>
+          <div class="p-p">
+            <p>
+              [내츄럴플러스] 100억 프로바이오틱스 혼합 유산균 60캡슐
+              1박스(2개월분)
+            </p>
+            <p class="tag-p">#생유산균 100억 CFU#식물성캡슐#알루알루 포장</p>
+          </div>
+          <p class="price"><strong>18,900원</strong> <span>53%</span></p>
+          <button class="buy-btn">구매하기</button>
+        </article>
+        <article class="product-three product-flex">
+          <div class="p-img">
+            <img class="p-img" src="images/curcumin.png" alt="커큐민" />
+          </div>
+          <div class="p-p">
+            <p>[내츄럴플러스] 수용성 파워 커큐민 30정 3박스</p>
+          </div>
+          <p class="price"><strong>37,900원</strong> <span>58%</span></p>
+          <button class="buy-btn">구매하기</button>
+        </article>
+        <article class="product-four product-flex">
+          <div class="p-img">
+            <img class="p-img" src="images/gold.png" alt="골드" />
+          </div>
+          <div class="p-p">
+            <p>[내츄럴플러스] 인사덴티 골드 60정 1박스</p>
+            <p>#뼈+치아건강#항산화 작용#올인원 케어</p>
+          </div>
+          <p class="price"><strong>14,900원</strong> <span>63%</span></p>
+          <button class="buy-btn">구매하기</button>
+        </article>
+        <article class="product-five product-flex">
+          <div class="p-img">
+            <img class="p-img" src="images/lecithin.png" alt="레시틴" />
+          </div>
+          <div class="p-p">
+            <p>[내츄럴플러스] 100% 대두 레시틴 60캡슐 3박스(6개월분)</p>
+            <p>#뼈+치아건강#항산화 작용#올인원 케어</p>
+          </div>
+          <p class="price"><strong>31,900원</strong> <span>47%</span></p>
+          <button class="buy-btn">구매하기</button>
+        </article>
+        <article class="product-six product-flex">
+          <div class="p-img">
+            <img class="p-img" src="images/omegaone.png" alt="오메가" />
+          </div>
+          <div class="p-p">
+            <p>
+              [내츄럴플러스] 알티지 오메가3 1200 비타민D 180캡슐
+              1박스(6개월분)+비타민C 구미 2봉 증정
+            </p>
+            <p>#차태현 오메가3#국민오메가3#고함량#대용량#가성비 굿!</p>
+          </div>
+          <p class="price"><strong>49,900원</strong> <span>72%</span></p>
+
+          <button class="buy-btn">구매하기</button>
+        </article>
+      </section>
+    </main>
 
     <footer>
       <img class="footer-logo-img" src="images/logo.png" alt="푸터로고" />
